<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.epam.tc.demo</groupId>
  <artifactId>epam-test-auto-jul-2021</artifactId>
  <version>2021.07.29-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <testng.configs.path>${project.build.testOutputDirectory}/testng</testng.configs.path>
    <testng.suite.file>${testng.configs.path}/lesson1.empty.suite.xml</testng.suite.file>

    <checkstyle.version>8.42</checkstyle.version>
    <lombok.version>1.18.20</lombok.version>
    <logback-classic.version>1.2.5</logback-classic.version>
    <testng.version>7.4.0</testng.version>
    <assertj-core.version>3.20.2</assertj-core.version>
    <allure.version>2.14.0</allure.version>
    <aspectj.version>1.9.5</aspectj.version>
    <selenium.version>3.141.59</selenium.version>
    <webdrivermanager.version>4.4.3</webdrivermanager.version>
    <cucumber.version>6.11.0</cucumber.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.2</version>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>
            <!--  pay attention to use exact url for checkstyle plugin ruleset  -->
            https://raw.githubusercontent.com/DmitryKhodakovsky/epam-training-center-code-checkers-configurations/main/checkstyle/checkstyle.xml
          </configLocation>
          <encoding>${project.build.sourceEncoding}</encoding>
          <includeTestSourceDirectory>true</includeTestSourceDirectory>
          <consoleOutput>true</consoleOutput>
          <failsOnError>true</failsOnError>
          <linkXRef>false</linkXRef>
        </configuration>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
        <configuration>
          <argLine>
            --illegal-access=permit
            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
          </argLine>
          <suiteXmlFiles>
            <suiteXmlFile>${testng.suite.file}</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectj.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>Selenium-lesson1-demo-first-profile</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson1.package.suite.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson1-allTests</id>
      <activation>
        <!-- If no profile is selected explicitly, then this profile is activated -->
        <!--<activeByDefault>true</activeByDefault>-->
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson1.utils.allTests.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson1-bigAmountInProgressiveTest</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson1.utils.bigAmountTests.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson1-flatTaxTests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson1.utils.flatTaxTests.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson1-progressiveTaxTests</id>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson1.utils.progressiveTaxTests.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson4</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson4.class.suite.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson5-pure-java</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson5.pure.java.suite.xml</testng.suite.file>
      </properties>
    </profile>
    <profile>
      <id>Selenium-lesson5-cucumber</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <testng.suite.file>${testng.configs.path}/lesson5.cucumber.suite.xml</testng.suite.file>
      </properties>
    </profile>
  </profiles>

  <dependencies>
    <!-- begin: for demonstration -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback-classic.version}</version>
      <!--  default scope is compile  -->
    </dependency>
    <!-- end: for demonstration -->

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>${testng.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj-core.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>${allure.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-java</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>io.github.bonigarcia</groupId>
      <artifactId>webdrivermanager</artifactId>
      <version>${webdrivermanager.version}</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-testng</artifactId>
      <version>${cucumber.version}</version>
    </dependency>

    <dependency>
      <groupId>io.cucumber</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber.version}</version>
    </dependency>

    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-cucumber6-jvm</artifactId>
      <version>${allure.version}</version>
    </dependency>
  </dependencies>

  <reporting>
    <excludeDefaults>true</excludeDefaults>
    <plugins>
      <plugin>
        <groupId>io.qameta.allure</groupId>
        <artifactId>allure-maven</artifactId>
        <version>2.10.0</version>
        <configuration>
          <reportVersion>${allure.version}</reportVersion>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>
